<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifyActivity"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/name_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/full_name"
            app:layout_constraintBottom_toTopOf="@+id/guideline_name"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_name"
            android:textColor="@color/light_gray"
            />

        <ImageView
            android:id="@+id/edit_name_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_name"
            android:layout_margin="8dp"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".5" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/function_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/function"
            app:layout_constraintBottom_toTopOf="@+id/guideline_function"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/function_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_function"
            android:textColor="@color/light_gray"
            />

        <ImageView
            android:id="@+id/edit_fucntion_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_function"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_function"
            android:layout_margin="8dp"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline_function"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".5" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/tel_fix_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/tel_fix"
            app:layout_constraintBottom_toTopOf="@+id/guideline_tel_fix"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tel_fix_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_tel_fix"
            android:textColor="@color/light_gray"
            />

        <ImageView
            android:id="@+id/edit_tel_fix_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_tel_fix"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_tel_fix"
            android:layout_margin="8dp"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline_tel_fix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".5" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/tel_mobile_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/mobile"
            app:layout_constraintBottom_toTopOf="@+id/guideline_tel_mobile"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tel_mobile_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_tel_mobile"
            android:textColor="@color/light_gray"
            />

        <ImageView
            android:id="@+id/edit_tel_mobile_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_tel_mobile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_tel_mobile"
            android:layout_margin="8dp"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline_tel_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".5" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/adr_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/adr"
            app:layout_constraintBottom_toTopOf="@+id/guideline_adr"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/adr_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_adr"
            android:textColor="@color/light_gray"
            />

        <ImageView
            android:id="@+id/edit_adr_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_adr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_adr"
            android:layout_margin="8dp"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline_adr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".5" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/email_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/email"
            app:layout_constraintBottom_toTopOf="@+id/guideline_email"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_email"
            android:textColor="@color/light_gray"
            />

        <ImageView
            android:id="@+id/edit_email_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_black_24dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_email"
            android:layout_margin="8dp"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".5" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>